--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6428,6 +6428,445 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accident_index</th>\n",
+       "      <th>accident_year</th>\n",
+       "      <th>accident_reference</th>\n",
+       "      <th>vehicle_reference</th>\n",
+       "      <th>casualty_reference</th>\n",
+       "      <th>casualty_class</th>\n",
+       "      <th>sex_of_casualty</th>\n",
+       "      <th>age_of_casualty</th>\n",
+       "      <th>age_band_of_casualty</th>\n",
+       "      <th>casualty_severity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>casualty_imd_decile</th>\n",
+       "      <th>lsoa_of_casualty</th>\n",
+       "      <th>age_group</th>\n",
+       "      <th>casualties_count</th>\n",
+       "      <th>accidents_count</th>\n",
+       "      <th>LSOA name</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>casualty_severity_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022070151244</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>070151244</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Driver or rider</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>46 - 55</td>\n",
+       "      <td>Slight</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Less deprived 10-20%</td>\n",
+       "      <td>E01033378</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Cheshire East 053E</td>\n",
+       "      <td>On or near Newcastle Road</td>\n",
+       "      <td>-2.488437</td>\n",
+       "      <td>53.061740</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022070152668</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>070152668</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Driver or rider</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>26 - 35</td>\n",
+       "      <td>Slight</td>\n",
+       "      <td>...</td>\n",
+       "      <td>More deprived 10-20%</td>\n",
+       "      <td>E01018551</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Cheshire West and Chester 011C</td>\n",
+       "      <td>On or near Flint Court</td>\n",
+       "      <td>-2.889868</td>\n",
+       "      <td>53.267739</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022070154696</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>070154696</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Driver or rider</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>56 - 65</td>\n",
+       "      <td>Slight</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Least deprived 10%</td>\n",
+       "      <td>E01006134</td>\n",
+       "      <td>Adult</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022070154696</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>070154696</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Driver or rider</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>Over 75</td>\n",
+       "      <td>Slight</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Least deprived 10%</td>\n",
+       "      <td>E01018724</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Cheshire West and Chester 045C</td>\n",
+       "      <td>On or near Oathills Close</td>\n",
+       "      <td>-2.664853</td>\n",
+       "      <td>53.156260</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022070154696</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>070154696</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Driver or rider</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>56 - 65</td>\n",
+       "      <td>Slight</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Less deprived 30-40%</td>\n",
+       "      <td>W01000578</td>\n",
+       "      <td>Senior</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Pembrokeshire 014B</td>\n",
+       "      <td>On or near Foss Way</td>\n",
+       "      <td>-4.887997</td>\n",
+       "      <td>51.697906</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  accident_index  accident_year accident_reference  vehicle_reference  \\\n",
+       "0  2022070151244           2022          070151244                  2   \n",
+       "1  2022070152668           2022          070152668                  1   \n",
+       "2  2022070154696           2022          070154696                  1   \n",
+       "3  2022070154696           2022          070154696                  2   \n",
+       "4  2022070154696           2022          070154696                  3   \n",
+       "\n",
+       "   casualty_reference   casualty_class sex_of_casualty  age_of_casualty  \\\n",
+       "0                   1  Driver or rider          Female             46.0   \n",
+       "1                   1  Driver or rider            Male             30.0   \n",
+       "2                   1  Driver or rider          Female             58.0   \n",
+       "3                   3  Driver or rider          Female             78.0   \n",
+       "4                   2  Driver or rider            Male             63.0   \n",
+       "\n",
+       "  age_band_of_casualty casualty_severity  ...   casualty_imd_decile  \\\n",
+       "0              46 - 55            Slight  ...  Less deprived 10-20%   \n",
+       "1              26 - 35            Slight  ...  More deprived 10-20%   \n",
+       "2              56 - 65            Slight  ...    Least deprived 10%   \n",
+       "3              Over 75            Slight  ...    Least deprived 10%   \n",
+       "4              56 - 65            Slight  ...  Less deprived 30-40%   \n",
+       "\n",
+       "  lsoa_of_casualty age_group casualties_count accidents_count  \\\n",
+       "0        E01033378     Adult                1               2   \n",
+       "1        E01018551     Adult                1               5   \n",
+       "2        E01006134     Adult                6               1   \n",
+       "3        E01018724    Senior                6               3   \n",
+       "4        W01000578    Senior                6               2   \n",
+       "\n",
+       "                        LSOA name                   Location Longitude  \\\n",
+       "0              Cheshire East 053E  On or near Newcastle Road -2.488437   \n",
+       "1  Cheshire West and Chester 011C     On or near Flint Court -2.889868   \n",
+       "2                             NaN                        NaN       NaN   \n",
+       "3  Cheshire West and Chester 045C  On or near Oathills Close -2.664853   \n",
+       "4              Pembrokeshire 014B        On or near Foss Way -4.887997   \n",
+       "\n",
+       "    Latitude casualty_severity_encoded  \n",
+       "0  53.061740                         1  \n",
+       "1  53.267739                         1  \n",
+       "2        NaN                         1  \n",
+       "3  53.156260                         1  \n",
+       "4  51.697906                         1  \n",
+       "\n",
+       "[5 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 355,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "accident_index                            0\n",
+       "accident_year                             0\n",
+       "accident_reference                        0\n",
+       "vehicle_reference                         0\n",
+       "casualty_reference                        0\n",
+       "casualty_class                            0\n",
+       "sex_of_casualty                           0\n",
+       "age_of_casualty                           0\n",
+       "age_band_of_casualty                      0\n",
+       "casualty_severity                         0\n",
+       "pedestrian_location                       0\n",
+       "pedestrian_movement                       0\n",
+       "car_passenger                             0\n",
+       "bus_or_coach_passenger                    0\n",
+       "pedestrian_road_maintenance_worker        0\n",
+       "casualty_type                             0\n",
+       "casualty_home_area_type                   0\n",
+       "casualty_imd_decile                       0\n",
+       "lsoa_of_casualty                          0\n",
+       "age_group                                 0\n",
+       "casualties_count                          0\n",
+       "accidents_count                           0\n",
+       "LSOA name                             15039\n",
+       "Location                              15039\n",
+       "Longitude                             15039\n",
+       "Latitude                              15039\n",
+       "casualty_severity_encoded                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 364,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "accident_index                        0\n",
+       "accident_year                         0\n",
+       "accident_reference                    0\n",
+       "vehicle_reference                     0\n",
+       "casualty_reference                    0\n",
+       "casualty_class                        0\n",
+       "sex_of_casualty                       0\n",
+       "age_of_casualty                       0\n",
+       "age_band_of_casualty                  0\n",
+       "casualty_severity                     0\n",
+       "pedestrian_location                   0\n",
+       "pedestrian_movement                   0\n",
+       "car_passenger                         0\n",
+       "bus_or_coach_passenger                0\n",
+       "pedestrian_road_maintenance_worker    0\n",
+       "casualty_type                         0\n",
+       "casualty_home_area_type               0\n",
+       "casualty_imd_decile                   0\n",
+       "lsoa_of_casualty                      0\n",
+       "age_group                             0\n",
+       "casualties_count                      0\n",
+       "accidents_count                       0\n",
+       "LSOA name                             0\n",
+       "Location                              0\n",
+       "Longitude                             0\n",
+       "Latitude                              0\n",
+       "casualty_severity_encoded             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cleaner_df = clean_df.dropna()\n",
+    "cleaner_df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predictive Modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 368,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accident Severity Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming a column named 'severity' exists for the target variable. If it's named differently, this needs to be updated.\n",
+    "target = 'casualty_severity'\n",
+    "\n",
+    "# Select a subset of features that could be relevant for predicting accident severity\n",
+    "feature_columns = ['age_of_casualty', 'sex_of_casualty', 'casualty_class', 'Longitude', 'Latitude']\n",
+    "X = df[feature_columns]\n",
+    "y = df[target]  #\n",
+    "\n",
+    "# Preprocessing for numerical features\n",
+    "numerical_features = ['age_of_casualty', 'Longitude', 'Latitude']\n",
+    "numerical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='median')),\n",
+    "    ('scaler', StandardScaler())])\n",
+    "\n",
+    "# Preprocessing for categorical features\n",
+    "categorical_features = ['sex_of_casualty', 'casualty_class']\n",
+    "categorical_transformer = Pipeline(steps=[\n",
+    "    ('imputer', SimpleImputer(strategy='constant', fill_value='missing')),\n",
+    "    ('onehot', OneHotEncoder(handle_unknown='ignore'))])\n",
+    "\n",
+    "# Bundle preprocessing for numerical and categorical data\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    transformers=[\n",
+    "        ('num', numerical_transformer, numerical_features),\n",
+    "        ('cat', categorical_transformer, categorical_features)])\n",
+    "\n",
+    "# Splitting the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7764184251580589\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       Fatal       0.00      0.00      0.00       150\n",
+      "     Serious       0.28      0.07      0.11      2337\n",
+      "      Slight       0.80      0.96      0.87      9692\n",
+      "\n",
+      "    accuracy                           0.78     12179\n",
+      "   macro avg       0.36      0.34      0.33     12179\n",
+      "weighted avg       0.69      0.78      0.72     12179\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating a new model pipeline with preprocessing and RandomForestClassifier\n",
+    "model_pipeline = Pipeline(steps=[('preprocessor', preprocessor),\n",
+    "                                 ('model', RandomForestClassifier(random_state=42))])\n",
+    "\n",
+    "# Training the model pipeline with the correct target\n",
+    "model_pipeline.fit(X_train, y_train)\n",
+    "\n",
+    "# Predicting on the test set with the trained model\n",
+    "y_pred = model_pipeline.predict(X_test)\n",
+    "\n",
+    "# Evaluating the model's performance\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "classification_rep = classification_report(y_test, y_pred)\n",
+    "\n",
+    "print(accuracy)\n",
+    "print(classification_rep)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
