--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -6768,12 +6768,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 377,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
@@ -6786,6 +6786,13 @@
    "metadata": {},
    "source": [
     "### Accident Severity Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Prepration"
    ]
   },
   {
@@ -6822,6 +6829,20 @@
     "\n",
     "# Splitting the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train, Test, Validate"
    ]
   },
   {
@@ -6864,6 +6885,82 @@
     "\n",
     "print(accuracy)\n",
     "print(classification_rep)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XGBoost Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! python -m pip install xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 379,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7934970030380163\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       Fatal       0.00      0.00      0.00       150\n",
+      "     Serious       0.40      0.03      0.05      2337\n",
+      "      Slight       0.80      0.99      0.88      9692\n",
+      "\n",
+      "    accuracy                           0.79     12179\n",
+      "   macro avg       0.40      0.34      0.31     12179\n",
+      "weighted avg       0.71      0.79      0.71     12179\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgb_pipeline = Pipeline(steps=[\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('model', XGBClassifier(use_label_encoder=False, eval_metric='mlogloss', random_state=42))\n",
+    "])\n",
+    "\n",
+    "# Initialize the LabelEncoder\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "# Fit and transform the target variable to encode labels into integers\n",
+    "y_train_encoded = label_encoder.fit_transform(y_train)\n",
+    "y_test_encoded = label_encoder.transform(y_test)\n",
+    "\n",
+    "# Update the pipeline fitting and prediction steps to use the encoded target variable\n",
+    "xgb_pipeline.fit(X_train, y_train_encoded)\n",
+    "y_pred_xgb_encoded = xgb_pipeline.predict(X_test)\n",
+    "\n",
+    "# Optionally, if you need to interpret the model predictions, you can transform the predictions back to the original labels\n",
+    "y_pred_xgb = label_encoder.inverse_transform(y_pred_xgb_encoded)\n",
+    "\n",
+    "# Calculate accuracy and classification report with the original labels for readability\n",
+    "accuracy_xgb = accuracy_score(y_test, y_pred_xgb)\n",
+    "classification_rep_xgb = classification_report(y_test, y_pred_xgb)\n",
+    "\n",
+    "print(accuracy_xgb)\n",
+    "print(classification_rep_xgb)"
    ]
   },
   {
